fix(openapi): update contact info
